tests/snapshots/run_wpt_conformance__litert_reduceProduct_float16_0D_tensor_empty_axes.snap
---
source: tests/run_wpt_conformance.rs
expression: "format!(\"{file_name} {test_name}, {backend_prefix}\\n {msg}\")"
---
reduce_product.https.any.js reduceProduct float16 0D tensor empty axes, litert
 Failed to convert graph: graph conversion failed for litert: unsupported operation: ReduceProduct { input: 0, options: Some(MLReduceOptions { label: "", axes: Some([]), keep_dimensions: false }), outputs: [1] }

--- built graph ---
webnn_graph "graph" v2 {
  inputs {
    reduceProductInput: f16[];
  }

  nodes {
    [reduceProductOutput] = reduceProduct(reduceProductInput, axes=[], keepDimensions=false, label="");
  }

  outputs { reduceProductOutput; }
}
