tests/snapshots/run_wpt_conformance__litert_reduceProduct_float16_2D_tensor_default_options.snap
---
source: tests/run_wpt_conformance.rs
expression: "format!(\"{file_name} {test_name}, {backend_prefix}\\n {msg}\")"
---
reduce_product.https.any.js reduceProduct float16 2D tensor default options, litert
 Failed to convert graph: graph conversion failed for litert: unsupported operation: ReduceProduct { input: 0, options: Some(MLReduceOptions { label: "", axes: None, keep_dimensions: false }), outputs: [1] }

--- built graph ---
webnn_graph "graph" v2 {
  inputs {
    reduceProductInput: f16[4, 6];
  }

  nodes {
    [reduceProductOutput] = reduceProduct(reduceProductInput, axes=null, keepDimensions=false, label="");
  }

  outputs { reduceProductOutput; }
}
